--- a/Read_me_now.html
+++ b/Read_me_now.html
@@ -22,12 +22,16 @@
   
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 <script>
-  window.OneSignal = window.OneSignal || [];
-  OneSignal.push(function() {
-    OneSignal.init({
-      appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
+  var OneSignal = window.OneSignal || [];
+    OneSignal.push(function() {
+      OneSignal.init({
+        appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
+        notifyButton: {
+          enable: true,
+        },
+      });
+      OneSignal.showNativePrompt();
     });
-  });
 </script>
 
   <script type="text/javascript" charset="utf-8">
