--- a/Read_me_now.html
+++ b/Read_me_now.html
@@ -280,7 +280,7 @@ function nav_act(id){
     OneSignal.init({
       appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
       notifyButton: {
-        enable: true,
+        enable: false,
       },
     });
   });
