--- a/Read_me_now.html
+++ b/Read_me_now.html
@@ -135,6 +135,34 @@ function nav_act(id){
 
   <div class="card-header bg-danger">
 
+    <h5>2 july 2020</h5>
+
+  </div>
+
+  <div class="card-body bg-transparent" style="margin-left: 10px">
+
+    <p class="card-text">
+
+      <ul>
+
+        <li>Added new folder Lectures and Essentials</li>
+
+        <li>Lectures contains links to best Lectures on youtube and unacademy</li>
+        
+        <li>Essentials has all required materials for preparation.</li>
+
+      </ul>
+
+    </p>
+
+  </div>
+
+</div>
+
+<div class="card updcont border border-danger bg-transparent" >
+
+  <div class="card-header bg-danger">
+
     <h5>30 june 2020</h5>
 
   </div>
