--- a/Read_me_now.html
+++ b/Read_me_now.html
@@ -298,20 +298,14 @@ function nav_act(id){
 <script type="text/javascript" charset="utf-8">
 
   upd();
-
 </script>
-
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
-<script>
+</script>
   window.OneSignal = window.OneSignal || [];
   OneSignal.push(function() {
     OneSignal.init({
       appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
-      notifyButton: {
-        enable: false,
-      },
     });
- OneSignal.showNativePrompt();
   });
 </script>
 
