--- a/Read_me_now.html
+++ b/Read_me_now.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 
-  <link rel="stylesheet" href="https://ashuhar455.github.io/gaterepo/stylecdn.css">
+  <link rel="stylesheet" href="https://ashuhar455.github.io/stylecdn.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
