--- a/Lecessen.html
+++ b/Lecessen.html
@@ -183,8 +183,9 @@ function nav_act(id){
     <p class="card-text">
       <ul>
         <li class=""><a href="https://mega.nz/folder/QOwQxQ4I#oL05bYnuxjgq9jMQhA-CkA ">Kreatryx (paid)</a>- Downloadable package for free.</li>
-        <li class=""><a href=""> </a></li>
-        <li class=""><a href=" "> </a></li>
+        <li class=""><a href="https://www.youtube.com/playlist?list=PLs5_Rtf2P2r5YY5b23uDGrtpo42ezMmGp"> Kreatryx-Unacademy</a>- By Ankit Goyal sir, complete</li>
+        <li class=""><a href="https://www.youtube.com/playlist?list=PL4CeeRMOVBDf4bejrLPf0LmsdoRcHyt9Y"> KN Rao</a>- In depth concepts on white board.</li>
+        <li class=""><a href="https://youtu.be/fmY9orwBu7w">Kreatryx strategy</a></li>
       </ul>
     </p>
   </div>
