--- a/Lecessen.html
+++ b/Lecessen.html
@@ -152,7 +152,7 @@ function nav_act(id){
   <div class="card-body bg-transparent" style="margin-left: 10px">
     <p class="card-text">
       <ul>
-        <li><a href=""></a>Signals and system has not yet been started by channels hence will be available when ciurses start.</li>
+        <li><a href=""></a>Signals and system has not yet been started by channels hence will be available when courses start, Same applicable to others.</li>
         <li><a href="https://www.youtube.com/playlist?list=PLBlnK6fEyqRhG6s3jYIU48CqsT5cyiDTO">Neso Academy</a>- Short lectures, but lengthy course.</li>
         <li><a href="https://youtu.be/Vqpt77-3EfE">Kreatryx strategy</a></li>
       </ul>
@@ -213,7 +213,7 @@ function nav_act(id){
     <p class="card-text">
       
       <ul>
-        <li><a href="https://mega.nz/folder/YSggSQAa#MGY2vWVVbOJ0WkO1_EXTAg">Downloadable for free.</a></li>
+        <li><a href="https://mega.nz/folder/YSggSQAa#MGY2vWVVbOJ0WkO1_EXTAg">Kreatryx (paid)</a> - Downloadable for free.</li>
         
       </ul>
     </p>
