--- a/Lecessen.html
+++ b/Lecessen.html
@@ -50,6 +50,18 @@ function nav_act(id){
 
 
   </script>
+  
+    
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
+    });
+  });
+</script>
+
   <style type="text/css" media="all">
   </style>
 </head>
@@ -152,7 +164,7 @@ function nav_act(id){
   <div class="card-body bg-transparent" style="margin-left: 10px">
     <p class="card-text">
       <ul>
-        <li><a href=""></a>Signals and system has not yet been started by channels hence will be available when courses start, Same applicable to others.</li>
+        <li><a href=""></a>Signals and system has not yet been started by channels hence will be available when courses start, Same applicable to .</li>
         <li><a href="https://www.youtube.com/playlist?list=PLBlnK6fEyqRhG6s3jYIU48CqsT5cyiDTO">Neso Academy</a>- Short lectures, but lengthy course.</li>
         <li><a href="https://youtu.be/Vqpt77-3EfE">Kreatryx strategy</a></li>
       </ul>
