--- a/updates.html
+++ b/updates.html
@@ -145,6 +145,39 @@ function nav_act(id){
 
   <div class="card-header bg-danger">
 
+    <h5>9 july 2020</h5>
+
+  </div>
+
+  <div class="card-body bg-transparent" style="margin-left: 10px">
+
+    <p class="card-text">
+
+      <ul>
+
+        <li>Added Lecture links to tje page.</li>
+        <li>Added kreatryx paid lectures, they are downloadable but please dont share its direct download link to others.</li>
+
+        <li>Added essential apps, test series, and books</li>
+        
+        <li>Updated links to pages.</li>
+        <li>Added Subscription support, now allow subscription and receive notifications every time there is an update.</li>
+        <li>Updated upcomming material list.</li>
+        <li>Added MadeEasy Handbook PDF in essentials.</li>
+        
+
+      </ul>
+
+    </p>
+
+  </div>
+
+</div>
+
+<div class="card updcont border border-danger bg-transparent" >
+
+  <div class="card-header bg-danger">
+
     <h5>2 july 2020</h5>
 
   </div>
