--- a/Lecessen.html
+++ b/Lecessen.html
@@ -281,6 +281,26 @@ function nav_act(id){
 
 <div class="card border border-success bg-transparent" >
   <div class="card-header bg-success">
+    <h5>IMPORTANT VIDEOS</h5>
+  </div>
+  <div class="card-body bg-transparent" style="margin-left: 10px">
+    <p class="card-text">
+      <p class="font-weight-light" style="text-align:center"></p>
+      <ul>
+        <li><a href="https://youtu.be/dD6381P8p9U">6 Month Stategy</a>- Well explained by Ankit sir</li>
+        <li><a href="https://youtu.be/0tuOYsfHBSw">Test series analysis</a>- By Ashish Ranjan</li>
+        <li><a href="https://youtu.be/R4MTRxM67pw">Test series analysis 2</a>- By Ashish Ranjan</li>
+        <li><a href="https://youtu.be/7eIG6zCS1Bg">Test series improvement</a>- By Ashish Ranjan</li>
+        <li><a href="https://youtu.be/jenGAKpOs1Y">Common prep. mistakes</a>- Important to watch</li>
+        <li><a href="https://youtu.be/yxyYrglDE4I">Preparation with limited resources</a>By MadeEasy</li>
+        <li><a href="">More comming soon</a></li>
+      </ul>
+    
+</div>
+</div>
+
+<div class="card border border-success bg-transparent" >
+  <div class="card-header bg-success">
     <h5>TEST SERIES</h5>
   </div>
   <div class="card-body bg-transparent" style="margin-left: 10px">
