--- a/updates.html
+++ b/updates.html
@@ -107,7 +107,7 @@ function nav_act(id){
 
 <nav class="navbar navbar-light fixed-top bg-danger navbar-expand-md">
 
-<a class="navbar-brand font-weight-light " style="font-family:f1" href="#">
+<a class="navbar-brand font-weight-light " style="font-family:f1" href="https://drive.google.com/folderview?id=1p1bwn_JemTH6meypbmYoTXILs-ESoaN4">
 
   Gate Repository
 
