--- a/updates.html
+++ b/updates.html
@@ -28,6 +28,9 @@
       appId: "c47aa4ab-61c5-4d52-8e7c-cb09b49363c9",
     });
   });
+  
+xhttp.open("GET", "https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB", true);
+xhttp.send();
 </script>
 
 
