--- a/updates.html
+++ b/updates.html
@@ -31,6 +31,7 @@
   
 xhttp.open("GET", "https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB", true);
 xhttp.send();
+console.fetch("https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB")
 </script>
 
 
