--- a/updates.html
+++ b/updates.html
@@ -29,9 +29,8 @@
     });
   });
   
-xhttp.open("GET", "https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB", true);
-xhttp.send();
-console.fetch("https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB")
+xmlHttp.open( "GET","https://maker.ifttt.com/trigger/updsaw/with/key/bgKrziZeBHoTS9cZXrNRsB" , false ); // false for synchronous request
+    xmlHttp.send( null );
 </script>
 
 
