--- a/updates.html
+++ b/updates.html
@@ -143,6 +143,31 @@ function nav_act(id){
 <div class="jumbotron bg-danger " id="header">UPDATES</div>
 
 <div class="" id="updcont">
+  
+  <div class="card updcont border border-danger bg-transparent" >
+
+  <div class="card-header bg-danger">
+
+    <h5>29 july 2020</h5>
+
+  </div>
+
+  <div class="card-body bg-transparent" style="margin-left: 10px">
+
+    <p class="card-text">
+
+      <ul>
+
+        <li>Added Gate Academy workbooks EE EC</li>
+        <li>Added Made Easy Machines material, (new).</li>
+
+      </ul>
+
+    </p>
+
+  </div>
+
+</div>
 
 <div class="card updcont border border-danger bg-transparent" >
 
