--- a/updates.html
+++ b/updates.html
@@ -141,8 +141,10 @@ function nav_act(id){
 <div class="container" id="cont1">
 
 <div class="jumbotron bg-danger " id="header">UPDATES</div>
+  <p style="color:yellow;text-align:center;">(Updates are now no longer active)</p>
 
 <div class="" id="updcont">
+  
   
   <div class="card updcont border border-danger bg-transparent" >
 
